src/assets/styles/dashboard.scss
@import 'mixinsVariables';


/*==========  ID Rules  ==========*/
#table-wrapper {
    @include container(100%, fit-content, 20px auto);
    min-height: 600px !important;
    overflow-x: scroll;
    position: relative;
    background: $White;
    padding: 20px;
    border: 1px solid rgba(33, 63, 125, 0.1);
    box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
    border-radius: 4px;

    &::-webkit-scrollbar {
        display: none;
    }
}

#pagination-wrapper {
    @include container(fit-content, fit-content, 0px auto);  
    @include flexboxWrap(row, center, center);
    padding: 10px; 

    .arrow-buttons {
        position: relative;
        @include container(24px, 24px, 0px 10px);
        background-color: rgba(33, 63, 125, 0.1);
        border-radius: 4px;

        img {
            position: absolute;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
            margin: auto;
        }
    }

    button {
        background: none;
        border: none;
        font-family: 'Work Sans';
        font-style: normal;
        font-weight: 500;
        font-size: 16px;
        line-height: 19px;
        color: $Inactive;
    }

    @include desktopView {
        display: inline-flex;
        float: right;
        margin: 20px 0;
    }
}

#total-wrapper {
    @include container(fit-content, fit-content, 20px auto);  
    @include flexboxWrap(row, center, center);
    padding: 10px;  
    
    
    p {
        font-family: 'Work Sans';
        font-weight: 500;
        font-size: 14px;
        line-height: 16px;
        color: $DeepBlue;
        margin: 0;
    }

    select {
        @include container(55px, 30px, 0px 10px);
        background: rgba(33, 63, 125, 0.1);
        border-radius: 4px;
        font-family: 'Work Sans';
        font-weight: 500;
        font-size: 14px;
        line-height: 16px;
        color: $DeepBlue;
    }

    @include desktopView {
        display: inline-flex;
        float: left;
        margin: 20px 0;
    }
}

#bottom-details {
    @include flexboxWrap(column, center, center);
    @include container(100%, fit-content, 0px auto);
    padding-bottom: 60px;

    @include desktopView {
        flex-direction: row;
        justify-content: space-between;
        padding-bottom: 0px;
    }
}


/*==========  Class Rules  ==========*/
.dashboard-details {
    @include container(90%, 100%, 40px 5%);
    position: absolute;
    top: 90px;

    @include desktopView {
        @include container(65%, 100%, 20px 5%);
        right: 0;
    }

    @include minWidth(1336px) {
        @include container(75%, 100%, 20px 2.5%);
    }
}

.users-features-flex {
    @include flexboxWrap(row, space-evenly, center);

    @include minWidth(1336px) {
        justify-content: space-between;
    }
}

.feature {
    @include container(40%, 100%, 10px 0);
    padding: 20px 10px 20px 20px;
    text-transform: uppercase;
    background: $White;
    border: 1px solid rgba(33, 63, 125, 0.1);
    box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
    border-radius: 4px;

    div {
        @include container(40px, 40px, 0);
        padding: 10px;
        border-radius: 40px;
        position: relative;

        img {
            position: absolute;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
            margin: auto;
        }
    }

    p {
        
        font-family: 'Work Sans';
        font-weight: 500;
        font-size: 14px;
        color: $Inactive;
    }

    h3 {
        
        font-family: 'Work Sans';
        font-weight: 600;
        font-size: 24px;
        color: $DeepBlue;
        margin: 10px 0;
       
    }

    @include landscapeSet {
        width: 40%;
    }

    @include minWidth(1336px) {
        width: 20%;
    }
}

.users-table {
    @include container(100%, fit-content, 0);

    thead {
        height: 70px;
    }

    thead tr th {
        min-width: 150px;
        margin: 0px 20px;
        font-family: 'Work Sans';
        font-weight: 600;
        font-size: 12px;
        line-height: 14px;
        text-align: left;
        text-transform: uppercase;
        color: $Inactive;

        img {
            margin-left: 7px;
            margin-bottom: -5px;
        }
    }

    tbody {
        height: fit-content;
    }

    tbody tr {
        margin: 15px 0px;
        height: 60px !important;
    }

    tbody tr td {
        font-family: 'Work Sans';
        font-weight: 400;
        font-size: 14px;
        line-height: 16px;
        color: $Inactive;
        position: relative;
    }
}

.user-options {
    @include container(180px, fit-content, 0px);
    position: absolute;
    right: 0;
    z-index: 20;
    background-color: $White;
    border: 1px solid rgba(84, 95, 125, 0.04);
    box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
    border-radius: 4px;

    ul {
        list-style: none;
        margin: 0;
        padding: 10px 15px;

        li {
            @include flexboxWrap(row, flex-start, center);
            padding: 10px 0px;
            font-family: 'Work Sans';
            text-transform: capitalize;
            font-weight: 500;
            font-size: 14px;
            line-height: 16px;
            color: $Inactive;
            cursor: pointer;

            img {
                margin: 0px 5px;
            }
        }
    }    
}


/*==========  Element Rules  ==========*/  
h2 {
    font-family: 'Work Sans';
    text-transform: capitalize;
    font-weight: 500;
    font-size: 24px;
    line-height: 28px;
    color: $DeepBlue;
}

/*==========  User Status Rules  ==========*/ 
.active {
    @include statusType($Active, rgb(57, 205, 98));
}

.inactive {
    @include statusType($Inactive, rgb(84, 95, 125));
}

.pending {
    @include statusType($Pending, rgb(233, 178, 0));
}

.blacklisted {
    @include statusType($Blacklisted, rgb(228, 3, 59));
}

